# stereotyping

./: .gitignore  dev.mateusrodcosta.Stereotyping.Devel.json  meson.build
data/: dev.mateusrodcosta.Stereotyping.desktop.in  dev.mateusrodcosta.Stereotyping.metainfo.xml.in  meson.build
src/: config.rs.in  main.rs  meson.build
